--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-pdf-viewer/toolbar": "^3.12.0",
     "@react-pdf/renderer": "^3.1.12",
     "@sentry/browser": "^7.70.0",
+    "@tippyjs/react": "^4.2.6",
     "axios": "^1.5.1",
     "chart.js": "^2.9.4",
     "d3": "^3.5.17",
@@ -74,9 +75,12 @@
   },
   "devDependencies": {
     "babel-plugin-named-exports-order": "0.0.2",
-    "eslint": "^8.51.0",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "flow-bin": "^0.218.1",
     "prop-types": "15.8.1",
     "typescript": "^5.0.0",
@@ -88,7 +92,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "fix": "eslint --fix",
-    "serve": "serve build -l 80"
+    "lint": "./node_modules/.bin/eslint",
+    "serve": "serve build -l 8000"
   },
   "browserslist": {
     "production": [
