--- a/package.json
+++ b/package.json
@@ -72,8 +72,7 @@
     "react-virtualized": "^9.22.5",
     "react-window": "^1.8.9",
     "serve": "^14.2.1",
-    "tabulator-tables": "^5.5.2",
-    "@tippyjs/react": "^4.2.6"
+    "tabulator-tables": "^5.5.2"
   },
   "devDependencies": {
     "babel-plugin-named-exports-order": "0.0.2",
@@ -89,7 +88,7 @@
     "webpack": "5.88.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "HTTPS=false react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
