--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "homepage": ".",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@cypress/webpack-dev-server": "^3.7.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
@@ -28,13 +29,18 @@
     "@react-pdf/renderer": "^3.1.12",
     "@sentry/browser": "^7.75.1",
     "@tippyjs/react": "^4.2.6",
+    "@types/cypress": "^1.1.3",
+    "@types/jest": "^29.5.11",
+    "@types/mocha": "^10.0.6",
     "axios": "^1.6.2",
     "chart.js": "^2.9.4",
+    "cypress": "^13.6.2",
     "d3": "^3.5.17",
     "dayjs": "^1.11.8",
     "dotenv": "^16.3.1",
     "eslint-config-prettier": "9.0.0",
     "iframe-resizer-react": "^1.1.0",
+    "jest": "^29.7.0",
     "js-file-download": "^0.4.12",
     "json-server": "0.17.3",
     "leaflet": "^1.7.1",
@@ -75,6 +81,7 @@
     "tabulator-tables": "^5.5.2"
   },
   "devDependencies": {
+    "@cypress/webpack-preprocessor": "^6.0.1",
     "babel-plugin-named-exports-order": "0.0.2",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "19.0.4",
@@ -84,17 +91,20 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "flow-bin": "^0.218.1",
     "prop-types": "15.8.1",
-    "typescript": "^5.0.0",
     "webpack": "5.88.1"
   },
   "scripts": {
-    "start": "HTTPS=false react-scripts start",
+    "start": "HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "fix": "eslint --fix",
     "lint": "./node_modules/.bin/eslint",
-    "serve": "serve build -l 8000"
+    "serve": "serve build -l 8000",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "cypress:record": "cypress run --record --key a42c44b4-bbb3-40c5-9605-22fc2bedb05f",
+    "cypress": "npx wait-on https://localhost:3000/ && npx cypress run"
   },
   "browserslist": {
     "production": [
