--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "homepage": ".",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@cypress/react": "^8.0.0",
     "@cypress/webpack-dev-server": "^3.7.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -36,6 +37,7 @@
     "chart.js": "^2.9.4",
     "cypress": "^13.6.2",
     "cypress-react-unit-test": "^4.17.2",
+    "cypress-visual-regression": "^3.0.0",
     "d3": "^3.5.17",
     "dayjs": "^1.11.8",
     "dotenv": "^16.3.1",
@@ -82,6 +84,7 @@
     "tabulator-tables": "^5.5.2"
   },
   "devDependencies": {
+    "@applitools/eyes-cypress": "^3.40.5",
     "@cypress/webpack-preprocessor": "^6.0.1",
     "babel-plugin-named-exports-order": "0.0.2",
     "eslint": "^8.2.0",
@@ -92,11 +95,12 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "flow-bin": "^0.218.1",
     "html-webpack-plugin": "^5.6.0",
+    "i": "^0.3.7",
     "prop-types": "15.8.1",
     "webpack": "5.88.1"
   },
   "scripts": {
-    "start": "HTTPS=true react-scripts start",
+    "start": "HTTPS=false react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
