--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "axios": "^1.6.2",
     "chart.js": "^2.9.4",
     "cypress": "^13.6.2",
+    "cypress-image-diff-js": "^2.1.3",
     "cypress-react-unit-test": "^4.17.2",
     "cypress-visual-regression": "^3.0.0",
     "d3": "^3.5.17",
@@ -100,8 +101,8 @@
     "webpack": "5.88.1"
   },
   "scripts": {
-    "start": "HTTPS=false react-scripts start",
-    "build": "react-scripts build",
+    "start": "HTTPS=true react-scripts start",
+    "start:dev": "HTTPS=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "fix": "eslint --fix",
