--- a/package.json
+++ b/package.json
@@ -5,9 +5,6 @@
   "license": "GPL-3.0-only",
   "homepage": ".",
   "dependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@cypress/react": "^8.0.0",
-    "@cypress/webpack-dev-server": "^3.7.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
@@ -15,7 +12,6 @@
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.3",
     "@mui/styles": "^5.14.3",
-    "@mui/types": "^7.2.8",
     "@mui/x-data-grid": "^6.16.1",
     "@mui/x-date-pickers": "^6.16.1",
     "@react-leaflet/core": "^1.0.2",
@@ -35,10 +31,6 @@
     "@types/mocha": "^10.0.6",
     "axios": "^1.6.2",
     "chart.js": "^2.9.4",
-    "cypress": "^13.6.2",
-    "cypress-image-diff-js": "^2.1.3",
-    "cypress-react-unit-test": "^4.17.2",
-    "cypress-visual-regression": "^3.0.0",
     "d3": "^3.5.17",
     "dayjs": "^1.11.8",
     "dotenv": "^16.3.1",
@@ -85,7 +77,14 @@
     "tabulator-tables": "^5.5.2"
   },
   "devDependencies": {
+        "cypress": "^13.6.2",
+    "cypress-image-diff-js": "^2.1.3",
+    "cypress-react-unit-test": "^4.17.2",
+    "cypress-visual-regression": "^3.0.0",
     "@applitools/eyes-cypress": "^3.40.5",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@cypress/react": "^8.0.0",
+    "@cypress/webpack-dev-server": "^3.7.2",
     "@cypress/webpack-preprocessor": "^6.0.1",
     "babel-plugin-named-exports-order": "0.0.2",
     "eslint": "^8.2.0",
@@ -101,8 +100,8 @@
     "webpack": "5.88.1"
   },
   "scripts": {
-    "start": "HTTPS=true react-scripts start",
-    "start:dev": "HTTPS=false react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "fix": "eslint --fix",
@@ -110,7 +109,7 @@
     "serve": "serve build -l 8000",
     "cypress": "cypress open",
     "cypress:run": "cypress run",
-    "cypress:record": "cypress run --record --key a42c44b4-bbb3-40c5-9605-22fc2bedb05f",
+    "cypress:record": "cypress run --rec rd --key a42c44b4-bbb3-40c5-9605-22fc2bedb05f",
     "cypress:localhost": "npx wait-on https://localhost:3000/ && npx cypress run"
   },
   "browserslist": {
