--- a/package.json
+++ b/package.json
@@ -77,16 +77,16 @@
     "tabulator-tables": "^5.5.2"
   },
   "devDependencies": {
-        "cypress": "^13.6.2",
-    "cypress-image-diff-js": "^2.1.3",
-    "cypress-react-unit-test": "^4.17.2",
-    "cypress-visual-regression": "^3.0.0",
     "@applitools/eyes-cypress": "^3.40.5",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@cypress/react": "^8.0.0",
     "@cypress/webpack-dev-server": "^3.7.2",
     "@cypress/webpack-preprocessor": "^6.0.1",
     "babel-plugin-named-exports-order": "0.0.2",
+    "cypress": "^13.6.2",
+    "cypress-image-diff-js": "^2.1.3",
+    "cypress-react-unit-test": "^4.17.2",
+    "cypress-visual-regression": "^3.0.0",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-plugin-import": "^2.25.3",
@@ -100,7 +100,7 @@
     "webpack": "5.88.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "GENERATE_SOURCEMAP=false react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
