--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.6.2",
     "chart.js": "^2.9.4",
-    "d3": "^3.5.17",
+    "d3": "^7.8.5",
     "dayjs": "^1.11.8",
     "dotenv": "^16.3.1",
     "eslint-config-prettier": "9.0.0",
@@ -65,37 +65,50 @@
     "react-pdf-html": "^1.1.18",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^5.3.3",
-    "react-scripts": "^5.0.1",
     "react-select": "^5.7.7",
     "react-tabulator": "^0.19.0",
     "react-virtual": "^2.10.4",
     "react-virtualized": "^9.22.5",
     "react-window": "^1.8.9",
     "serve": "^14.2.1",
-    "tabulator-tables": "^5.5.2",
-    "@tippyjs/react": "^4.2.6"
+    "tabulator-tables": "^5.5.2"
   },
   "devDependencies": {
+    "@vite/vitejs": "2.3.19",
+    "@vite/vitejs-http": "2.3.19",
+    "@vitejs/plugin-basic-ssl": "1.0.2",
+    "@vitejs/plugin-react": "4.2.1",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
     "babel-plugin-named-exports-order": "0.0.2",
-    "eslint": "^8.2.0",
+    "eslint": "^8.56.0",
     "eslint-config-airbnb": "19.0.4",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "flow-bin": "^0.218.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "flow-bin": "^0.226.1",
     "prop-types": "15.8.1",
-    "typescript": "^5.0.0",
-    "webpack": "5.88.1"
+    "vite": "^5.0.11",
+    "vite-plugin-commonjs": "^0.10.1",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-react-pages": "4.1.6"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "fix": "eslint --fix",
-    "lint": "./node_modules/.bin/eslint",
-    "serve": "serve build -l 8000"
+    "dev": "vite --open",
+    "start": "vite --open",
+    "host": "vite --open --host",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
+    "format": "prettier \"src/**/*.{js,jsx,ts,tsx,css,scss}\" --write",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:cover": "vitest run --coverage",
+    "test:e2e": "pnpm preview:test 'cypress open'",
+    "test:e2e:headless": "pnpm preview:test 'cypress run'",
+    "test:e2e:ci": "vite build && pnpm preview:test 'cypress run --record'"
   },
   "browserslist": {
     "production": [
