--- a/package.json
+++ b/package.json
@@ -74,9 +74,10 @@
     "tabulator-tables": "^5.5.2"
   },
   "devDependencies": {
+    "@gadgetinc/vite-plugin-basic-ssl": "^1.1.0",
     "@vite/vitejs": "2.3.19",
     "@vite/vitejs-http": "2.3.19",
-    "@vitejs/plugin-basic-ssl": "1.0.2",
+    "@vitejs/plugin-basic-ssl": "1.1.0",
     "@vitejs/plugin-react": "4.2.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
@@ -89,6 +90,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "flow-bin": "^0.226.1",
     "prop-types": "15.8.1",
+    "source-map": "^0.7.4",
     "vite": "^5.0.11",
     "vite-plugin-commonjs": "^0.10.1",
     "vite-plugin-eslint": "^1.8.1",
