--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "leaflet": "^1.7.1",
     "leaflet-geosearch": "^3.6.1",
     "lodash": "^4.17.21",
-    "node": "^14.7.0",
     "react": "^16.14.0",
     "react-chartjs-2": "^2.11.2",
     "react-datepicker": "^4.2.1",
@@ -34,9 +33,9 @@
     "react-tabulator": "^0.9.6"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
+  "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
